Added Navigation to review,signup and blog pages

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,22 @@
 
 <body>
   <header>
+    <nav>
+      <ul>
+        <li class="title-left">
+          <a class="home-link" href="index.html">
+            <h1 class="main-header">Chusi Po</h1>
+          </a>
+        </li>
+        <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
+        <li><a class="nav-link" href="/review.html">Review</a></li>
+        <li><a class="nav-link" href="/blog.html">Blog</a></li>
+        <li><a class="nav-link" href="#bookshow">Book show</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <header>
     <h1>Chusi Po Blogs</h1>
     <h2>The Best Science Fiction Movies</h2>
   </header>
