--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
             <h1 class="main-header">Chusi Po</h1>
           </a>
         </li>
-        <li><a class="nav-link" href="#signin">Sign Up</a></li>
-        <li><a class="nav-link" href="#bookshow">Book show</a></li>
+        <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
+        <li><a class="nav-link" href="/review.html">Review</a></li>
         <li><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li><a class="nav-link" href="#review">Reviews</a></li>
+        <li><a class="nav-link" href="#bookshow">Book show</a></li>
       </ul>
     </nav>
   </header>
+
   <main>
 
     <!-- Book Show Section -->
@@ -46,7 +47,7 @@
       </g>
     </svg>
 
-    <!-- Sign In Section -->
+    <!-- Sign In Section
 
     <h3 class="section-heading">Signin</h3>
 
@@ -61,7 +62,8 @@
           <path d="M6.88,79.12v13.76h158.24v-13.76z"></path>
         </g>
       </g>
-    </svg>
+    </svg> -->
+
     <!-- Blog Section -->
 
     <h3 class="section-heading">Blog</h3>
@@ -87,7 +89,8 @@
 
   <footer class="footer-style">
     <div class="copyright-imformation">
-      <p>Chusi Po Digital LLC|&copy; Copyright 2021|Bought to you by the team <span class="copyright-title-bold">Chusi PO</span></p>
+      <p>Chusi Po Digital LLC|&copy; Copyright 2021|Bought to you by the team <span class="copyright-title-bold">Chusi
+          PO</span></p>
       <p>Made with ❤️ in Design and Development</p>
     </div>
   </footer>
