--- a/review.html
+++ b/review.html
@@ -10,6 +10,23 @@
 </head>
 
 <body>
+  <!-- Navigation Section -->
+  <header>
+    <nav>
+      <ul>
+        <li class="title-left">
+          <a class="home-link" href="index.html">
+            <h1 class="main-header">Chusi Po</h1>
+          </a>
+        </li>
+        <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
+        <li><a class="nav-link" href="/review.html">Review</a></li>
+        <li><a class="nav-link" href="/blog.html">Blog</a></li>
+        <li><a class="nav-link" href="#bookshow">Book Show</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <h1 class="heading-title">Chusi Po Reviews</h1>
   <section>
     <article>
@@ -35,7 +52,8 @@
         that the
         human element is completely drained from them, making them as disposable as a fast food cheeseburger. Worst of
         all, that
-        “content” approach is pulling the life from stars who have shown so much of it in the past. When the poster for
+        “content” approach is pulling the life from stars who have shown so much of it in the past. When the poster
+        for
         “Red
         Notice” was released, most people lamented its Photoshopped, bland nature. They didn’t realize how honestly it
         captured
@@ -46,22 +64,26 @@
         terms, for
         the record), reunites with his muse, Dwayne Johnson, who plays the FBI’s top profiler John Hartley. The film
         opens with
-        an awkwardly inserted info dump about three coveted eggs that were once the property of Cleopatra. Only two have
+        an awkwardly inserted info dump about three coveted eggs that were once the property of Cleopatra. Only two
+        have
         been
         discovered, making the missing golden egg into a Holy Grail for treasure hunters, including one of the world’s
         most
         notorious criminals Nolan Booth (Ryan Reynolds). In the film’s relatively effective opening sequence, Hartley
         catches
-        Booth trying to steal one of the eggs, inadvertently tying the two for the rest of the film into a classic buddy
+        Booth trying to steal one of the eggs, inadvertently tying the two for the rest of the film into a classic
+        buddy
         comedy
         dynamic—the muscle guy and the fast talker. They battle the authorities, a few bad guys, and another criminal
         mastermind
-        nicknamed The Bishop (Gal Gadot) as they bounce around the world, trying to obtain all three eggs and sell them
+        nicknamed The Bishop (Gal Gadot) as they bounce around the world, trying to obtain all three eggs and sell
+        them
         to the
         highest bidder.
       </p>
       <p>
-        People have lamented the growing sensation that Netflix increasingly makes product that’s designed to be watched
+        People have lamented the growing sensation that Netflix increasingly makes product that’s designed to be
+        watched
         with a
         phone in your hand, and I’m not sure I’ve ever felt this more strongly than while watching “Red Notice.” Made
         for $200
@@ -71,16 +93,20 @@
         While there
         are some truly goofy and yet somehow predictable twists, there’s almost no real story here, certainly not a
         memorable
-        one. And the settings, while often gorgeous, somehow lack personality too. Even the title sounds like something
+        one. And the settings, while often gorgeous, somehow lack personality too. Even the title sounds like
+        something
         grabbed
         out of an Action Movie Screenwriter program.
       </p>
       <p>
-        So much money, so much charm, so much movie, and yet it adds up to so very little. “Red Notice” is as disposable a
+        So much money, so much charm, so much movie, and yet it adds up to so very little. “Red Notice” is as
+        disposable a
         movie
-        as you’ll see this year, something that most Netflix subscribers will have trouble remembering exists weeks later.
+        as you’ll see this year, something that most Netflix subscribers will have trouble remembering exists weeks
+        later.
         It
-        sets up a potential franchise in its final scenes (because of course it does)—let’s hope everyone involved forgets
+        sets up a potential franchise in its final scenes (because of course it does)—let’s hope everyone involved
+        forgets
         about
         that too.
       </p>
