--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+    <!-- Navigation Section -->
+    
+    <header>
+      <nav>
+        <ul>
+          <li class="title-left">
+            <a class="home-link" href="index.html">
+              <h1 class="main-header">Chusi Po</h1>
+            </a>
+          </li>
+          <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
+          <li><a class="nav-link" href="/review.html">Review</a></li>
+          <li><a class="nav-link" href="/blog.html">Blog</a></li>
+          <li><a class="nav-link" href="#bookshow">Book show</a></li>
+        </ul>
+      </nav>
+    </header>
+
   <div class="overlay">
 
     <form>
