Fixed some issues

--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
           <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
           <li><a class="nav-link" href="/review.html">Review</a></li>
           <li><a class="nav-link" href="/blog.html">Blog</a></li>
-          <li><a class="nav-link" href="#bookshow">Book show</a></li>
+          <li><a class="nav-link" href="/showbook.html">Book show</a></li>
         </ul>
       </nav>
     </header>
