--- a/review.html
+++ b/review.html
@@ -22,7 +22,7 @@
         <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
         <li><a class="nav-link" href="/review.html">Review</a></li>
         <li><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li><a class="nav-link" href="#bookshow">Book Show</a></li>
+        <li><a class="nav-link" href="/showbook.html">Book Show</a></li>
       </ul>
     </nav>
   </header>
