Fixed some more issues

--- a/blog.html
+++ b/blog.html
@@ -18,10 +18,10 @@
             <h1 class="main-header">Chusi Po</h1>
           </a>
         </li>
-        <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
-        <li><a class="nav-link" href="/review.html">Review</a></li>
-        <li><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li><a class="nav-link" href="/showbook.html">Book show</a></li>
+        <li><a class="nav-link" href="signup.html">Sign Up</a></li>
+        <li><a class="nav-link" href="review.html">Review</a></li>
+        <li><a class="nav-link" href="blog.html">Blog</a></li>
+        <li><a class="nav-link" href="showbook.html">Book show</a></li>
       </ul>
     </nav>
   </header>
@@ -35,7 +35,7 @@
       <article>
         <h3>1. Interstellar (2014)</h3>
         <h4>IMDB Rating: 8.6</h4>
-        <img src="/images/interstellar.jpg" height="500px" width="400px" alt="interstellar image">
+        <img src="images/interstellar.jpg" height="500px" width="400px" alt="interstellar image">
         <p>When Earth becomes uninhabitable in the future, a farmer and ex-NASA pilot, Joseph Cooper, is tasked to pilot
           a
           spacecraft, along with a team of researchers, to find a new planet for humans.</p>
@@ -43,7 +43,7 @@
       <article>
         <h3>2. Dune 2021</h3>
         <h4>IMDB Rating: 8.2</h4>
-        <img src="/images/dune.jpg" height="500px" width="400px" alt="dune image">
+        <img src="images/dune.jpg" height="500px" width="400px" alt="dune image">
         <p>Paul Atreides, a brilliant and gifted young man born into a great destiny beyond his understanding, must
           travel to the
           most dangerous planet in the universe to ensure the future of his family and his people. As malevolent forces
@@ -55,7 +55,7 @@
       <article>
         <h3>3. Guardians of Galaxy (2014)</h3>
         <h4>IMDB Rating: 8</h4>
-        <img src="/images/guardians_of_galaxy.jpg" height="500px" width="400px" alt="guardians of galaxy image">
+        <img src="images/guardians_of_galaxy.jpg" height="500px" width="400px" alt="guardians of galaxy image">
         <p>Peter escapes from the planet Morag with a valuable orb that Ronan the Accuser wants. He eventually forms a
           group with
           unwilling heroes to stop Ronan.</p>
@@ -63,7 +63,7 @@
       <article>
         <h3>4. Avatar (2009)</h3>
         <h4>IMDB Rating: 7.8</h4>
-        <img src="/images/avatar.jpg" height="500px" width="400px" alt="avatar image">
+        <img src="images/avatar.jpg" height="500px" width="400px" alt="avatar image">
         <p>Jake, who is paraplegic, replaces his twin on the Na'vi inhabited Pandora for a corporate mission. After the
           natives
           accept him as one of their own, he must decide where his loyalties lie.</p>
@@ -71,7 +71,7 @@
       <article>
         <h3>5. A Quiet Place (2008)</h3>
         <h4>IMDB Rating: 7.5</h4>
-        <img src="/images/a_quiet_place_paet_1.jpg" height="500px" width="400px" alt="a quiet place place">
+        <img src="images/a_quiet_place_paet_1.jpg" height="500px" width="400px" alt="a quiet place place">
         <p>A family struggles for survival in a world where most humans have been killed by blind but noise-sensitive
           creatures.
           They are forced to communicate in sign language to keep the creatures at bay.</p>
@@ -79,7 +79,7 @@
       <article>
         <h3>6. Tenet (2020)</h3>
         <h4>IMDB Rating: 7.4</h4>
-        <img src="/images/tenet.jpg" height="500px" width="400px" alt="tenet">
+        <img src="images/tenet.jpg" height="500px" width="400px" alt="tenet">
         <p>When a few objects that can be manipulated and used as weapons in the future fall into the wrong hands, a CIA
           operative,
           known as the Protagonist, must save the world.</p>
@@ -87,7 +87,7 @@
       <article>
         <h3>7. A Quite Place Part2 (2020)</h3>
         <h4>IMDB Rating: 7.3</h4>
-        <img src="/images/the_quite_place_part_2.jpg" height="500px" width="400px" alt="a quiet place part 2">
+        <img src="images/the_quite_place_part_2.jpg" height="500px" width="400px" alt="a quiet place part 2">
         <p>In a post-apocalyptic world, Regan and her family learn that the alien predators can be defeated using
           high-frequency
           audio. Armed with this knowledge, they then set out to look for other survivors.</p>
@@ -95,7 +95,7 @@
       <article>
         <h3>8. The Tommorow War (2021)</h3>
         <h4>IMDB Rating: 6.6</h4>
-        <img src="/images/the-tomorrow-war-movie.jpg" height="500px" width="400px" alt="the Tommorow war">
+        <img src="images/the-tomorrow-war-movie.jpg" height="500px" width="400px" alt="the Tommorow war">
         <p>The world is stunned when a group of time travellers arrive from the year 2051 to deliver an urgent message:
           thirty
           years in the future, mankind is losing a global war against a deadly alien species.</p>
@@ -103,7 +103,7 @@
       <article>
         <h3>9. Life (2017)</h3>
         <h4>IMDB Rating: 6.6</h4>
-        <img src="/images/the_life.jpg" height="500px" width="400px" alt="life movie image">
+        <img src="images/the_life.jpg" height="500px" width="400px" alt="life movie image">
         <p>As astronauts discover the first evidence of extra-terrestrial life on Mars, they begin realising that the
           life form is
           extremely intelligent and hostile.</p>
@@ -111,7 +111,7 @@
       <article>
         <h3>10. Chaos Walking(2021)</h3>
         <h4>IMDB Rating: 5.8</h4>
-        <img src="/images/chaos_walking.jpg" height="500px" width="400px" alt="chaos walking">
+        <img src="images/chaos_walking.jpg" height="500px" width="400px" alt="chaos walking">
         <p>In the not too distant future, Todd Hewitt (Tom Holland) discovers Viola (Daisy Ridley), a mysterious girl
           who crash
           lands on his planet, where all the women have disappeared and the men are afflicted by "the Noise" - a force
