--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Theater App🎦</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="body-style">
@@ -21,10 +21,10 @@
             <h1 class="main-header">Chusi Po</h1>
           </a>
         </li>
-        <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
-        <li><a class="nav-link" href="/review.html">Review</a></li>
-        <li><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li><a class="nav-link" href="/showbook.html">Book show</a></li>
+        <li><a class="nav-link" href="signup.html">Sign Up</a></li>
+        <li><a class="nav-link" href="review.html">Review</a></li>
+        <li><a class="nav-link" href="blog.html">Blog</a></li>
+        <li><a class="nav-link" href="showbook.html">Book show</a></li>
       </ul>
     </nav>
   </header>
