--- a/review.html
+++ b/review.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Review</title>
-  <link rel="stylesheet" href="/css/review.css">
+  <link rel="stylesheet" href="css/review.css">
 </head>
 
 <body>
@@ -19,10 +19,10 @@
             <h1 class="main-header">Chusi Po</h1>
           </a>
         </li>
-        <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
-        <li><a class="nav-link" href="/review.html">Review</a></li>
-        <li><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li><a class="nav-link" href="/showbook.html">Book Show</a></li>
+        <li><a class="nav-link" href="signup.html">Sign Up</a></li>
+        <li><a class="nav-link" href="review.html">Review</a></li>
+        <li><a class="nav-link" href="blog.html">Blog</a></li>
+        <li><a class="nav-link" href="showbook.html">Book Show</a></li>
       </ul>
     </nav>
   </header>
@@ -33,7 +33,7 @@
       <h3>Red Notice(2021)</h3>
       <h4>Rating: 2.5/5</h4>
       <h4>Sai Prasad, November 17, 2021</h4>
-      <img src="/images/rednoticeimage.jpg" alt="rednoticemovie">
+      <img src="images/rednoticeimage.jpg" alt="rednoticemovie">
       <h4>Where to Watch: <a href="https://www.netflix.com/in/title/81161626">Netflix</a></h4>
     </article>
     <article>
