--- a/showbook.html
+++ b/showbook.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Movie Seat Booking</title>
-  <link rel="stylesheet" href="/css/bookshow.css">
+  <link rel="stylesheet" href="css/bookshow.css">
 
   <style>
 
@@ -109,11 +109,11 @@
   </p>
 
   <div>
-      <button onclick="buyFunction()" class="btn-buy">
-        Buy
-      </button>
+    <button onclick="buyFunction()" class="btn-buy">
+      Buy
+    </button>
     <br>
-    <a href="./index.html">
+    <a href="index.html">
       <button class="btn-home">
         Home
       </button>
@@ -121,7 +121,7 @@
 
   </div>
 
-  <script src="/JavaScript/bookshow.js"></script>
+  <script src="JavaScript/bookshow.js"></script>
 </body>
 
 </html>
