--- a/signup.html
+++ b/signup.html
@@ -20,10 +20,10 @@
               <h1 class="main-header">Chusi Po</h1>
             </a>
           </li>
-          <li><a class="nav-link" href="/signup.html">Sign Up</a></li>
-          <li><a class="nav-link" href="/review.html">Review</a></li>
-          <li><a class="nav-link" href="/blog.html">Blog</a></li>
-          <li><a class="nav-link" href="/showbook.html">Book show</a></li>
+          <li><a class="nav-link" href="signup.html">Sign Up</a></li>
+          <li><a class="nav-link" href="review.html">Review</a></li>
+          <li><a class="nav-link" href="blog.html">Blog</a></li>
+          <li><a class="nav-link" href="showbook.html">Book show</a></li>
         </ul>
       </nav>
     </header>
@@ -59,7 +59,7 @@
 
   </div>
 
-  <script src="/JavaScript/signup.js"></script>
+  <script src="JavaScript/signup.js"></script>
 </body>
 
 </html>
