updated homepage section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
 
     <!-- Book Show Section -->
 
-    <h3 class="section-heading">Book Show</h3>
+    <h3 id="bookshow" class="section-heading">Book Show</h3>
+    <section class="bookshow-section">
+      <article>
+        <img class="bookshow-article-img" src="images/no_time_to_die.jpg" alt="" height="600px" width="400px">
+        <img class="bookshow-article-img" src="images/eternalimage.jpeg" alt="" height="600px" width="420px">
+        <img class="bookshow-article-img" src="images/ghostbuster_afterlife.jpg" alt="" height="600px" width="400px">
+        <a href="/showbook.html">
+          <h3>Bookshow</h3>
+        </a>
+      </article>
+    </section>
 
     <svg class="section-over-line" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
       viewbox="0 0 172 172" style=" fill:#000000;">
@@ -66,7 +76,15 @@
 
     <!-- Blog Section -->
 
-    <h3 class="section-heading">Blog</h3>
+    <h3 id="blog" class="section-heading">Blog</h3>
+
+    <section class="blog-section">
+      <article>
+        <img class="blog-article-image" src="images/the_pursuit_of_happiness.jpg" height="400px" width="700px"
+          alt="the pursuit of happiness">
+        <h3 class="blog-article-heading"> Check our new Blogpost <a href="blog.html">here</a></h3>
+      </article>
+    </section>
 
     <svg class="section-over-line" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
       viewbox="0 0 172 172" style=" fill:#000000;">
@@ -82,7 +100,15 @@
 
     <!-- Review Section -->
 
-    <h3 class="section-heading">Review</h3>
+    <h3 id="review" class="section-heading">Review</h3>
+    <section class="review-section">
+      <article>
+        <img class="review-article-image" src="images/rednoticeimage.jpg" height="500px" width="450px"
+          alt="the pursuit of happiness">
+        <h3 class="review-article-heading"> Check our new Review <a href="review.html">here</a></h3>
+      </article>
+    </section>
+
 
   </main>
   <!-- Footer  Section -->
