added signin page

--- a/signin.html
+++ b/signin.html
@@ -10,31 +10,31 @@
 </head>
 
 <body>
-    <!-- Navigation Section -->
-    
-    <header>
-      <nav>
-        <ul>
-          <li class="title-left">
-            <a class="home-link" href="index.html">
-              <h1 class="main-header">Chusi Po</h1>
-            </a>
-          </li>
-          <li><a class="nav-link" href="signup.html">Sign Up</a></li>
-          <li><a class="nav-link" href="review.html">Review</a></li>
-          <li><a class="nav-link" href="blog.html">Blog</a></li>
-          <li><a class="nav-link" href="showbook.html">Book show</a></li>
-        </ul>
-      </nav>
-    </header>
+  <!-- Navigation Section -->
+
+  <header>
+    <nav>
+      <ul>
+        <li class="title-left">
+          <a class="home-link" href="index.html">
+            <h1 class="main-header">Chusi Po</h1>
+          </a>
+        </li>
+        <li><a class="nav-link" href="signup.html">Sign Up</a></li>
+        <li><a class="nav-link" href="review.html">Review</a></li>
+        <li><a class="nav-link" href="blog.html">Blog</a></li>
+        <li><a class="nav-link" href="showbook.html">Book show</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <div class="overlay">
 
     <form>
-      
+
       <div class="con">
         <header class="head-form">
-          <h2>Sign Up</h2>
+          <h2><span class="invisible-text">h</span> Login  <span class="invisible-text">h</span></h2>
         </header>
         <br>
         <div class="field-set">
@@ -46,12 +46,12 @@
 
           <br>
 
-          <button onclick="signupFunction()" class="log-in">Signup</button>
+          <button class="log-in">Login</button>
         </div>
 
         <div>
           <button class="submits frgt-pass">Forgot Password</button>
-          <button class="submits sign-up"><a href = "signin.html">Login</a></button>
+          <button class="submits sign-up"><a href="signup.html">Signup</a></button>
         </div>
       </div>
 
